# tree-sitter-jinja2

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  Makefile  README.md  go.mod  grammar.js  jinja-test.py  old.js  package.json  pnpm-lock.yaml  pyproject.toml  setup.py  tree-sitter.json
bindings/go/: binding_test.go
bindings/python/tree_sitter_jinja/: __init__.py
bindings/rust/: lib.rs
queries/: brackets.scm  folds.scm  highlights.scm  indents.scm  injections.scm  locals.scm  outline.scm  tags.scm  textobjects.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: attribute_access.txt  autoescape_statement.txt  binary_expression.txt  block_statement.txt  call_block.txt  comment.txt  custom_tag.txt  debug_statement.txt  dict.txt  do_statement.txt  extends_statement.txt  filter.txt  filter_statement.txt  for_statement.txt  from_statement.txt  function_call.txt  identifier.txt  if_statement.txt  import_statement.txt  include_statement.txt  literal.txt  macro_statement.txt  method_call.txt  parenthesized_expression.txt  raw_statement.txt  set_statement.txt  slice.txt  subscript.txt  ternary_expression.txt  test_expression.txt  trans_statement.txt  tuple.txt  unary_expression.txt  with_statement.txt
